# moolu

./: pubspec.yaml
.github/workflows/: build-android.yml
NagglyApp_SourceCode/android/app/: build.gradle
NagglyApp_SourceCode/android/app/src/main/: AndroidManifest.xml
NagglyApp_SourceCode/android/app/src/main/cpp/: CMakeLists.txt  naggly_afis.cpp
NagglyApp_SourceCode/android/app/src/main/kotlin/com/naggly/naggly_os/: MainActivity.kt
NagglyApp_SourceCode/assets/models/: naggly_data.yaml
NagglyApp_SourceCode/lib/: afis_engine.dart  database_helper.dart  delaunay.dart  geometric_hasher.dart  main.dart  sms_codec.dart  yolo_detector.dart
